     Eaton UPSs, and rename mibs from `pw` to `eaton_pw_nm2`, and from
     `pxgx_ups` to `eaton_pxg_ups` [#1715]
   * Fixed the long standing "Warning: excessive poll failures" issue, that
     was tied to non-existent OIDs, not well handled in some parts of the
     driver [#1716]
   * `baytech-mib.c` subdriver: fixed `baytech_outlet_status_info[]` set
     of valid outlet status values [#1871]

 - The `bestfortress` driver shutdown handling was fixed to use a non-trivial
   default timeout [#1820]

 - GPIO drivers [#1855]:
   * Added a new category of drivers, using GPIO interface to locally connected
     devices (currently limited to 2018+ Linux libgpiod, but its architecture
     was designed to support more OSes with their equivalents - PRs welcome)
   * `generic_gpio_libgpiod` driver using `libgpiod` backend was added
     (defaults to be required on Linux, optional on other platforms)

 - Added support for `make install` of PyNUT module and NUT-Monitor desktop
   application [#1462, #1504]

 - Regular CI coverage for NUT codebase enhanced with CircleCI running some
   scenarios on MacOS, might add Windows in the future. Fixed some build
   issues for MacOS that had crept into NUT v2.8.0 release [#1415, #1421]

 - NUT software-only drivers (dummy-ups, clone, clone-outlet) separated from
   serial drivers in respective Makefile and configure script options [#1446]

 - Fixed support for common USB matching options ("vendor", "device", "bus",
   etc.) for `riello_usb` and `richcomm_usb` [#1763] and updated man pages
   of all USB drivers using these options to include the same description
   [#1766]

 - Added an `allow_duplicates` flag for common USB matching options which
   may help monitor several related no-name devices (although without knowing
   reliably which one is which... better than nothing) [#1756]

 - The `nut-scanner` program should now suggest same configuration fields as