@@ -5,5 +5,6 @@
 #include "snmp-ups.h"
 
 extern mib2nut_info_t	cyberpower;
+extern mib2nut_info_t	cyberpower2;
 
 #endif /* CYBERPOWER_MIB_H */
